--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ openpyxl==3.0.6
 pandas==1.2.1
 parsel==1.6.0
 Pillow==8.1.0
-psycopg2==2.8.6
+psycopg2-binary==2.8.6
 pusher==3.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -61,6 +61,7 @@ pylint==2.6.0
 PyNaCl==1.4.0
 pyOpenSSL==20.0.1
 python-dateutil==2.8.1
+python-decouple==3.4
 python3-openid==3.2.0
 pytz==2020.5
 PyYAML==5.4.1
