--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.3.1
 astroid==2.4.2
 attrs==20.3.0
 Automat==20.2.0
+autopep8==1.5.5
 beautifulsoup4==4.9.3
 bs4==0.0.1
 certifi==2020.12.5
@@ -30,6 +31,7 @@ filelock==3.0.12
 Flask==1.1.2
 hyperlink==21.0.0
 idna==2.10
+importlib-metadata==3.4.0
 incremental==17.5.0
 isort==5.7.0
 itemadapter==0.2.0
@@ -50,10 +52,11 @@ openpyxl==3.0.6
 pandas==1.2.1
 parsel==1.6.0
 Pillow==8.1.0
-psycopg2-binary==2.8.6
+psycopg2==2.8.6
 pusher==3.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.6.0
 pycparser==2.20
 PyHamcrest==2.0.2
 PyJWT==2.0.1
@@ -73,6 +76,8 @@ soupsieve==2.1
 sqlparse==0.4.1
 tablib==3.0.0
 toml==0.10.2
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
 urllib3==1.26.2
 virtualenv==20.4.0
 w3lib==1.22.0
@@ -81,4 +86,5 @@ Werkzeug==1.0.1
 wrapt==1.12.1
 xlrd==2.0.1
 xlwt==1.3.0
+zipp==3.4.0
 zope.interface==5.2.0
